<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="DataExchange" Id="{9a360a08-f702-4c49-ac48-25adf33d55e4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bVar1	: BOOL;
	iVar1	: DINT;
	button1 : BOOL;
	status1 : BOOL;
	
	sensor1 : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>